# RubiksCube

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: rubikscube_ext.cpp
src/cpp/: CMakeLists.txt  center_edges.cpp  center_edges.h  corner_solution.cpp  corner_solution.h  corners.cpp  corners.h  intrin.h  rotation.cpp  rotation.h
src/rubikscube/: __init__.py
tests/: test_cube2x2.py
tests/cpp/: CMakeLists.txt  test_center_edges.cpp  test_corner_solution.cpp  test_corners.cpp  test_intrin.cpp  test_rotation.cpp
